--- a/index.html
+++ b/index.html
@@ -236,9 +236,9 @@
             grid-template-rows: 1fr;
             justify-content: center; 
             justify-items: center;
-            color: rgba(23, 51, 128, 0.946);
-            font-family:'arial'; 
-            font-size: 1.15rem;
+            color: rgba(28, 47, 141, 0.964);
+            font-family:Verdana, Geneva, Tahoma, sans-serif; 
+            font-size: 1.18rem;
             text-align: left;
             line-height: 23.65px;
             margin-top: 0.7rem;
@@ -2585,7 +2585,7 @@ Dépendemment de leurs régions de vie, peu d'entre elles iront à l'école afin
                        </a> dans laquelle il a enseigné des enfants handicapés et orphelins, animé de multiples séances de sensibilisation avec thème focal "Handicap et Inclusion Sociale" de 2006 à 2014.
                        <br>
                        <br>
-                       En 2007, 2008, 2013, Gabriel a voyagé en Europe pour la recherche de fonds. Ses séjours l'ont conduit notamment à Genève, à Sion, à Delémont en Suisse en collaboration avec ses ami-es et les dirigeants de <a href="https://www.transporthandicap.ch/www/1-accueil" target="_blank"> Transport Handicap en Valais</a> et à <a href=" https://fr.wikipedia.org/wiki/Rastatt" target="_blank"> Rasttat</a> et <a href="https://fr.wikipedia.org/wiki/Kuppenheim" target="_blank"> Kuppenheim</a> dans le <a href="https://fr.wikipedia.org/wiki/Bade-Wurtemberg" target="_blank"> Bade-Wurtemberg [Baden-Württemberg] </a>en Allemagne pour donner des series de conférences sur l'association PAAS NEERE dont il était président, les différents projets à implémenter, les défis à atteindre et l'impact de l'association pour les communautés locales de la région de Ziniare.
+                       En 2007, 2008, 2013, Gabriel a voyagé en Europe pour la recherche de fonds. Ses séjours l'ont conduit notamment à <a href="https://www.geneve.ch/fr" target="_blank">Genève</a>, à <a href="https://www.sion.ch/" target="_blank"> Sion</a>, à Delémont en Suisse en collaboration avec ses ami-es et les dirigeants de <a href="https://www.transporthandicap.ch/www/1-accueil" target="_blank"> Transport Handicap en Valais</a> et à <a href=" https://fr.wikipedia.org/wiki/Rastatt" target="_blank"> Rasttat</a> et <a href="https://fr.wikipedia.org/wiki/Kuppenheim" target="_blank"> Kuppenheim</a> dans le <a href="https://fr.wikipedia.org/wiki/Bade-Wurtemberg" target="_blank"> Bade-Wurtemberg [Baden-Württemberg] </a>en Allemagne pour donner des series de conférences sur l'association PAAS NEERE dont il était président, les différents projets à implémenter, les défis à atteindre et l'impact de l'association pour les communautés locales de la région de Ziniare.
                       <br>
                       <br>
                       En 2012, il a été décoré Chevalier de l'Ordre du Mérite par l'état du Burkina Faso pour l'ensemble de sa contribution au développement et l'épanouissement d'une communauté différente, marginalisée dans la société dont les personnes handicapées.
@@ -2594,7 +2594,7 @@ Dépendemment de leurs régions de vie, peu d'entre elles iront à l'école afin
                       En 2016 il a créé Tiki N'Yiki pour élargir le soutien aux enfants orphelins et à d'autres enfants marginalisés. En Juillet 2016 Gabriel a été invité aux <a href="https://fr.wikipedia.org/wiki/%C3%89tats-Unis" target="_blank"> Etats-Unis </a>pour 3 mois afin de faire non seulement du networking mais aussi du fundraising et vendre de l'artisanat [Batiks] pour soutenir les projets de Tiki N'Yiki dont l'éducation et surtout la sécurité alimentaire. 
                       <br>
                       <br>
-                      De la côte-Est [New-York-City-NY, Boston-MA, Appleton-ME, Burlington & St Joahnnesbury VT] jusqu'à la côte-Ouest [Portland-OR, Olympia-WA] des Etats-Unis avec l'aide efficace d'ami-es, Gabriel a non seulement
+                      De la côte-Est [<a href="https://www.nyc.gov/" target="_blank"> New-York-City-NY</a>, <a href="https://www.boston.gov/" target="_blank">Boston-MA</a>, <a href="https://appleton.maine.gov/" target="_blank"> Appleton-ME</a>, <a href="https://www.burlingtonvt.gov/" target="_blank"> Burlington</a> & <a href="https://www.stjvt.com/" target="_blank"> St Johnsbury-VT</a>] jusqu'à la côte-Ouest [<a href="https://www.portland.gov/" target="_blank"> Portland-OR</a>, <a href="https://www.olympiawa.gov/#section7-anchor" target="_blank"> Olympia-WA</a>] des Etats-Unis avec l'aide efficace d'ami-es, Gabriel a non seulement
                        eu l'opportunité de présenter la vision de Tiki N'Yiki au cours de festivals et de foires mais a aussi pensé à des perpectives permettant de bâtir et élargir un réseau de collaborateurs afin de développer de nouveaux partenariats.
                        <br>
                        <br>
@@ -2660,4 +2660,5 @@ Dépendemment de leurs régions de vie, peu d'entre elles iront à l'école afin
 </body>
 
 </html>
+
 
