--- a/index.html
+++ b/index.html
@@ -26,8 +26,12 @@
     <link rel="javascript" type="text/javascript" href="js.main" media="all">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Inter&display=swap" rel="stylesheet">
-    <style> 
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Tektur&family=Titillium+Web&display=swap" rel="stylesheet">
+<style> 
 
 *{box-sizing: border-box;
     margin-top: 0;
@@ -519,13 +523,12 @@ hr{
     display: flex;
     position: relative;
     flex-direction: column;
-    width:100%;
+    width: 100%;
     height: auto;
     background: transparent;
     justify-content: center;
     align-items: center;
     padding: 10px; 
-    opacity: 0.98;
 }
 
 ::-webkit-scrollbar{
@@ -822,10 +825,11 @@ animation: auto 15s infinite linear;
     text-align: justify;
     width: 74%;
     height: auto;
-    font-family: Arial, Helvetica, sans-serif; 
-    font-size: 17.5px; 
-    line-height: 27.65px;
-    color:rgba(55, 55, 55, 0.956);
+    font-family: 'Tektur', cursive;
+    font-family: 'Titillium Web', sans-serif;
+    font-size: 1.29rem; 
+    line-height: 30px;
+    color:#232323de;
     padding: 20px;
     border-bottom: 0.15rem solid orangered;
 }
@@ -952,10 +956,12 @@ animation: auto 15s infinite linear;
     text-align: justify;
     width: 101%;
     height: auto;
-    font-family: Arial, Helvetica, sans-serif; 
-    font-size: 17.5px; 
-    line-height: 27.65px;
-    color:rgba(55, 55, 55, 0.956);
+    font-family: 'Tektur', cursive;
+    font-family: 'Titillium Web', sans-serif;
+    font-family: 'Titillium Web', sans-serif;
+    font-size: 1.29rem; 
+    line-height: 30px;
+    color:#232323de;
     padding: 15px;
 }
 
@@ -1218,11 +1224,11 @@ height: 220px;
 
 .TXT{
   width: 100%;
-  height: auto;
-  font-family: Arial, Helvetica, sans-serif; 
-    font-size: 17.5px; 
-    line-height: 27.65px;
-    color:rgba(55, 55, 55, 0.956);
+  font-family: 'Tektur', cursive;
+    font-family: 'Titillium Web', sans-serif;
+    font-size: 1.29rem; 
+    line-height: 30px;
+    color:#232323de;
     text-align: justify;
 }
 
@@ -1236,10 +1242,11 @@ height: 220px;
     text-align: justify;
     width: 72.5%;
     height: auto;
-    font-family: Arial, Helvetica, sans-serif; 
-    font-size: 17.5px; 
-    line-height: 27.65px;
-    color:rgba(55, 55, 55, 0.956);
+    font-family: 'Tektur', cursive;
+    font-family: 'Titillium Web', sans-serif;
+    font-size: 1.29rem; 
+    line-height: 30px;
+    color:#232323de;
     padding: 15px;
 }
 .HLTHY:hover{
@@ -1255,10 +1262,11 @@ height: 220px;
   justify-items: center;
   width: 100%;
   height: auto;
-  font-family: Arial, Helvetica, sans-serif; 
-    font-size: 17.5px; 
-    line-height: 27.65px;
-    color:rgba(55, 55, 55, 0.956);
+  font-family: 'Tektur', cursive;
+    font-family: 'Titillium Web', sans-serif;
+    font-size: 1.29rem; 
+    line-height: 30px;
+    color:#232323de;
 }
 
 .CHRZiniare {
@@ -1305,10 +1313,11 @@ transition: 0.26s linear;
   justify-items: center;
   width: 100%;
   height: auto;
-  font-family: Arial, Helvetica, sans-serif; 
-    font-size: 17.5px; 
-    line-height: 27.65px;
-    color:rgba(55, 55, 55, 0.956);
+  font-family: 'Tektur', cursive;
+    font-family: 'Titillium Web', sans-serif;
+    font-size: 1.29rem; 
+    line-height: 30px;
+    color:#232323de;
     border-top: 0.1rem solid #000;
 }
 
@@ -1332,10 +1341,11 @@ transition: 0.26s linear;
 }
 
 .Texo{
-  font-family: Arial, Helvetica, sans-serif; 
-    font-size: 17.5px; 
-    line-height: 27.65px;
-    color:rgba(55, 55, 55, 0.956);
+  font-family: 'Tektur', cursive;
+    font-family: 'Titillium Web', sans-serif;
+    font-size: 1.29rem; 
+    line-height: 30px;
+    color:#232323de;
     text-align: justify;
 }
 
@@ -1347,10 +1357,11 @@ transition: 0.26s linear;
   justify-items: center;
   width: 74%;
   height: auto;
-  font-family: Arial, Helvetica, sans-serif; 
-    font-size: 17.5px; 
-    line-height: 27.65px;
-    color:rgba(55, 55, 55, 0.956);
+  font-family: 'Tektur', cursive;
+    font-family: 'Titillium Web', sans-serif;
+    font-size: 1.29rem; 
+    line-height: 30px;
+    color:#232323de;
     padding: 15px;
 }
 
@@ -1394,9 +1405,11 @@ transition: 0.26s linear;
   align-items: center;
   width: 79%;
   height: 100px;
-  font-family: 'arial black';
-  font-size: 1.1em;
-  color: #969696c0;
+  font-family: 'Tektur', cursive;
+    font-family: 'Titillium Web', sans-serif;
+    font-size: 1.29rem; 
+    line-height: 30px;
+    color:#232323de;
   border-top: 2rem solid rgba(189, 189, 189, 0.425);
 
 }
@@ -2660,6 +2673,7 @@ Dépendemment de leurs régions de vie, peu d'entre elles iront à l'école afin
 </body>
 
 </html>
+
 
 
 
