--- a/index.html
+++ b/index.html
@@ -208,7 +208,8 @@
             background: transparent;
             color: rgba(235, 240, 255, 0.992);
             padding: 9px;
-            font-family:'arial';
+            font-family: 'Tektur', cursive;
+            font-family: 'Titillium Web', sans-serif;
             font-size: 19.5px;
             height: 55px;
             margin-top: 3px;
@@ -277,7 +278,8 @@
           height: 58px; 
           padding: 4px;
           font-size: 0.92rem; 
-          font-family: 'arial';
+          font-family: 'Tektur', cursive;
+          font-family: 'Titillium Web', sans-serif;
           cursor: pointer;
           border-top: 0.49rem solid cyan;
           border-right: 0.15rem solid rgba(92, 170, 248, 0.097);
@@ -310,7 +312,8 @@
             background: transparent;
             color: rgba(235, 240, 255, 0.992);
             padding: 9px;
-            font-family:'arial';
+            font-family: 'Tektur', cursive;
+            font-family: 'Titillium Web', sans-serif;
             font-size: 19.5px;
             height: 55px;
           }
@@ -338,7 +341,8 @@
             background: transparent;
             color: rgba(235, 240, 255, 0.992);
             padding: 9px;
-            font-family:'arial';
+            font-family: 'Tektur', cursive;
+            font-family: 'Titillium Web', sans-serif;
           }
 
           .myDiv1:hover{
@@ -364,7 +368,8 @@
             background: transparent;
             color: rgba(235, 240, 255, 0.992);
             padding: 9px;
-            font-family:'arial';
+            font-family: 'Tektur', cursive;
+            font-family: 'Titillium Web', sans-serif;
             }
 
           .myDiv2:hover{
@@ -390,7 +395,8 @@
             background: transparent;
             color: rgba(235, 240, 255, 0.992);
             padding: 9px;
-            font-family:'arial';
+            font-family: 'Tektur', cursive;
+            font-family: 'Titillium Web', sans-serif;
           }
           .myDivT:hover{
             background: -webkit-linear-gradient(rgb(255, 4, 4) 0%,rgb(255, 8, 3)) 100%;
@@ -415,7 +421,8 @@
             background: transparent;
             color: rgba(235, 240, 255, 0.992);
             padding: 9px;
-            font-family:'arial';
+            font-family: 'Tektur', cursive;
+            font-family: 'Titillium Web', sans-serif;
           }
 
           .Peinture:hover{
@@ -852,6 +859,8 @@ animation: auto 15s infinite linear;
   justify-items: center;
   width: 100%;
   height: auto;
+  font-family: 'Tektur', cursive;
+  font-family: 'Titillium Web', sans-serif;
   margin-bottom: 1rem;
 }
 .Noel:hover{
@@ -880,7 +889,8 @@ animation: auto 15s infinite linear;
 .kpt{
   width: 100%;
   height: auto;
-  font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif; 
+  font-family: 'Tektur', cursive;
+  font-family: 'Titillium Web', sans-serif;
   font-size: 17.5px;
   color:rgba(104, 104, 104, 0.857);
   line-height: 25px;
@@ -2006,7 +2016,7 @@ Tiki N'Yiki veut oeuvrer pour changer la tendance de telles mentalités, faire t
 <div class="NL">
 
   <div class="Noel">
-    <div style="font-family:'helvetica'; text-align: left; line-height: 21.7px; color: rgba(126, 126, 126, 0.927); font-family: georgia; font-size: 17.5px;">
+    <div style=" text-align: left; line-height: 21.7px; color: rgba(126, 126, 126, 0.927); font-family: georgia; font-size: 17.5px;">
       Noël est une célébration généralement adorée par beaucoup d'enfants. Pour ce faire Tiki N'Yiki organisait un arbre de Noël à l'approche de chaque 25 décembre (Jour de la Nativité) au cours duquel
       les enfants étaient invités à un repas. Une sensibilisation sur le handicap et l'inclusion est tenue et par la suite des questions sont posées afin de 
       recueillir les réactions des un-es et des autres. 
