--- a/index.html
+++ b/index.html
@@ -83,7 +83,8 @@
   justify-content: center;
   align-items: center;
   width: 97%;
-  font-family: 'verdana';
+  font-family: 'Tektur', cursive;
+  font-family: 'Titillium Web', sans-serif;
   font-size: 13px; 
   color: rgba(0, 128, 0, 0.944);
   padding: 5px;
@@ -111,8 +112,10 @@
       height: auto;
       color: rgb(255, 193, 37);
       padding: 10px;
-      font-family: verdana; 
-      font-size: 14px;
+      font-family: 'Tektur', cursive;
+      font-family: 'Titillium Web', sans-serif;
+      font-size: 16px;
+      margin-top: -0.5rem;
       
     }
 
@@ -132,8 +135,10 @@
       height: auto;
       color: rgb(255, 193, 37);
       padding: 10px;
-      font-family: verdana; 
-      font-size: 14px;
+      font-family: 'Tektur', cursive;
+      font-family: 'Titillium Web', sans-serif;
+      font-size: 16px;
+      margin-top: -0.5rem;
     }
 
     .Calculator:hover{
@@ -152,8 +157,10 @@
       height: auto;
       color: rgb(255, 193, 37);
       padding: 10px;
-      font-family: verdana; 
-      font-size: 14px;
+      font-family: 'Tektur', cursive;
+      font-family: 'Titillium Web', sans-serif; 
+      font-size: 16px;
+      margin-top: -0.5rem;
     }
 
     .dico:hover{
@@ -173,7 +180,8 @@
       color: rgb(255, 193, 37);
       padding: 10px;
       font-family: Verdana; 
-      font-size: 13px;
+      font-size: 13.5px;
+      margin-top: -0.25rem;
     }
 
     .datime:hover{
@@ -242,8 +250,9 @@
             justify-content: center; 
             justify-items: center;
             color: rgba(28, 47, 141, 0.964);
-            font-family:Verdana, Geneva, Tahoma, sans-serif; 
-            font-size: 1.1rem;
+            font-family: 'Tektur', cursive;
+            font-family: 'Titillium Web', sans-serif;
+            font-size: 1.25rem;
             text-align: left;
             line-height: 23.65px;
             margin-top: 0.7rem;
@@ -2682,6 +2691,5 @@ Dépendemment de leurs régions de vie, peu d'entre elles iront à l'école afin
 
 </body>
 </html>
-
 
 
