--- a/index.html
+++ b/index.html
@@ -593,7 +593,8 @@ hr{
   justify-content: center;
   justify-items: center;
   height: 349px;
-  font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif; 
+  font-family: 'Tektur', cursive;
+ font-family: 'Titillium Web', sans-serif;
  line-height: 25px; 
  font-size: 23px; 
  text-align: left; 
@@ -632,10 +633,10 @@ opacity: 1;
 .YTP{
   padding: 0.35rem;
   text-align: left;
-  font-size: 21px;
-  line-height: 22px;
+  font-size: 19px;
+  line-height: 24px;
   color: rgba(94, 94, 94, 0.765);
-  font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+  font-family: 'Tektur', cursive;
 }
 .YTP:hover{
   color:green;
@@ -1673,7 +1674,7 @@ function myFunction() {
 
 <img src="https://www.zupimages.net/up/23/31/zxgr.jpg" alt="Soleil couchant au Burkina Faso">
 <figure>
-  <figcaption style="font-family:Verdana, Geneva, Tahoma, sans-serif; color: orangered; font-size: 14px; padding: 12px; margin-left: 1rem;"><b>Soleil couchant de Nagreongo au Burkina Faso [ Copyright © 2013-GCK ]</b></figcaption>
+  <figcaption style=" font-family: 'Tektur', cursive; color: orangered; font-size: 14px; padding: 12px; margin-left: 1rem;">Soleil couchant de Nagreongo au Burkina Faso [ Copyright © 2013-GCK ]</figcaption>
   </figure>
 </div>
 
@@ -2691,5 +2692,4 @@ Dépendemment de leurs régions de vie, peu d'entre elles iront à l'école afin
 
 </body>
 </html>
-
 
