--- a/index.html
+++ b/index.html
@@ -1129,7 +1129,7 @@ height: 750px;
   align-items: center; 
   border: 0.12rem solid #b3b3b3; 
   border-radius: 50%; 
-  font-family: 'helvetica'; 
+  font-family:'Titillium Web', sans sherif;
   font-size: 22px; 
   line-height: 30px;
   cursor: pointer;
@@ -2662,7 +2662,7 @@ Dépendemment de leurs régions de vie, peu d'entre elles iront à l'école afin
       </div>
    
 
-    <div class="Thanking" style="padding: 1rem;"> <b style="font-family:Verdana, Geneva, Tahoma, sans-serif; color: rgba(0, 69, 187, 0.996); font-size: 17px">
+    <div class="Thanking" style="padding: 1rem;"> <b style="font-family:'Titillium Web', sans sherif; color: rgba(16, 84, 201, 0.996); font-size: 20px">
       Merci pour votre attention et vos réactions ! 
     </b>
   </div>
