--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
         height: 2rem;
         object-fit: cover;
         font-family: 'georgia';
-        background: rgba(200, 29, 86, 0.988);
+        background: rgba(186, 16, 73, 0.993);
     }
 
     .DAH{
@@ -110,7 +110,7 @@
       align-items: center;
       width: 100%;
       height: auto;
-      color: rgb(255, 193, 37);
+      color: gold;
       padding: 10px;
       font-family: 'Tektur', cursive;
       font-family: 'Titillium Web', sans-serif;
@@ -133,7 +133,7 @@
       align-items: center;
       width: 100%;
       height: auto;
-      color: rgb(255, 193, 37);
+      color: gold;
       padding: 10px;
       font-family: 'Tektur', cursive;
       font-family: 'Titillium Web', sans-serif;
@@ -155,7 +155,7 @@
       align-items: center;
       width: 100%;
       height: auto;
-      color: rgb(255, 193, 37);
+      color: gold;
       padding: 10px;
       font-family: 'Tektur', cursive;
       font-family: 'Titillium Web', sans-serif; 
@@ -177,7 +177,7 @@
       align-items: center;
       width: 100%;
       height: auto;
-      color: rgb(255, 193, 37);
+      color: gold;
       padding: 10px;
       font-family: Verdana; 
       font-size: 13.5px;
@@ -848,10 +848,10 @@ animation: auto 15s infinite linear;
     height: auto;
     font-family: 'Tektur', cursive;
     font-family: 'Titillium Web', sans-serif;
-    font-size: 1.29rem; 
+    font-size: 1.28rem; 
     line-height: 29px;
-    color:#232323de;
-    padding: 20px;
+    color:#262626de;
+    padding: 25px;
     border-bottom: 0.15rem solid orangered;
 }
 .k1 img{
@@ -861,7 +861,7 @@ animation: auto 15s infinite linear;
 }
 
 .k1:hover{
-  background:rgba(10, 40, 123, 0.034);
+  background:rgba(25, 64, 240, 0.04);
   border-bottom: 0.15rem solid orangered;
 }
 
@@ -970,7 +970,7 @@ animation: auto 15s infinite linear;
   width: 73%;
 }
 .Cartes:hover{
-  background:rgba(10, 40, 123, 0.034);
+  background:rgba(25, 64, 240, 0.04);
 }
 .CRT1{
   display: grid;
@@ -983,10 +983,10 @@ animation: auto 15s infinite linear;
     font-family: 'Tektur', cursive;
     font-family: 'Titillium Web', sans-serif;
     font-family: 'Titillium Web', sans-serif;
-    font-size: 1.29rem; 
+    font-size: 1.28rem; 
     line-height: 29px;
     color:#232323de;
-    padding: 15px;
+    padding: 25px;
 }
 
 .CRT1:hover{
@@ -1250,7 +1250,7 @@ height: 220px;
   width: 100%;
   font-family: 'Tektur', cursive;
     font-family: 'Titillium Web', sans-serif;
-    font-size: 1.29rem; 
+    font-size: 1.28rem; 
     line-height: 29px;
     color:#232323de;
     text-align: justify;
@@ -1268,13 +1268,13 @@ height: 220px;
     height: auto;
     font-family: 'Tektur', cursive;
     font-family: 'Titillium Web', sans-serif;
-    font-size: 1.29rem; 
+    font-size: 1.28rem; 
     line-height: 29px;
     color:#232323de;
-    padding: 15px;
+    padding: 25px;
 }
 .HLTHY:hover{
-  background:rgba(10, 40, 123, 0.034);
+  background:rgba(25, 64, 240, 0.04);
   border-bottom: 0.15rem solid orangered;
 }
 
@@ -1288,7 +1288,7 @@ height: 220px;
   height: auto;
   font-family: 'Tektur', cursive;
     font-family: 'Titillium Web', sans-serif;
-    font-size: 1.29rem; 
+    font-size: 1.28rem; 
     line-height: 29px;
     color:#232323de;
 }
@@ -1339,7 +1339,7 @@ transition: 0.26s linear;
   height: auto;
   font-family: 'Tektur', cursive;
     font-family: 'Titillium Web', sans-serif;
-    font-size: 1.29rem; 
+    font-size: 1.28rem; 
     line-height: 29px;
     color:#232323de;
     border-top: 0.1rem solid #000;
@@ -1367,7 +1367,7 @@ transition: 0.26s linear;
 .Texo{
   font-family: 'Tektur', cursive;
     font-family: 'Titillium Web', sans-serif;
-    font-size: 1.29rem; 
+    font-size: 1.28rem; 
     line-height: 29px;
     color:#232323de;
     text-align: justify;
@@ -1383,14 +1383,14 @@ transition: 0.26s linear;
   height: auto;
   font-family: 'Tektur', cursive;
     font-family: 'Titillium Web', sans-serif;
-    font-size: 1.29rem; 
+    font-size: 1.28rem; 
     line-height: 29px;
     color:#232323de;
-    padding: 15px;
+    padding: 25px;
 }
 
 .CC:hover{
-  background:rgba(10, 40, 123, 0.034);
+  background:rgba(25, 64, 240, 0.04);
   border-bottom: 0.15rem solid orangered;
 }
 
@@ -1431,8 +1431,8 @@ transition: 0.26s linear;
   height: 100px;
   font-family: 'Tektur', cursive;
   font-family: 'Titillium Web', sans-serif;
-  font-size: 1.29rem; 
-  line-height: 29px;
+  font-size: 1.28rem; 
+    line-height: 29px;
   color:#232323de;
   border-top: 2rem solid rgba(189, 189, 189, 0.425);
 
