--- a/index.html
+++ b/index.html
@@ -195,14 +195,14 @@
       display: flex;
       justify-content: center;
       align-items: center;
-                background: #010627f4;
+                background: #040a36f4;
                  width: 100%;
                  height: 69px;
                  object-fit: cover;
                  z-index: 1;
                  top: 0;
                  position: sticky;   
-                 box-shadow: 0 2px 0.45rem 0 #01062726;
+                 box-shadow: 0 2px 0.45rem 0 #040a3628;
           }
           
           
@@ -241,7 +241,7 @@
             column-gap: 1rem;
             width: 100%; 
             height: 133px; 
-            background: #d1d1d176;
+            background: #efefef76;
           }
 
           .BIENVENUE{
@@ -539,7 +539,7 @@ hr{
     flex-direction: column;
     width: 100%;
     height: auto;
-    background: #1566acf9;
+    background: #1061a9f9;
     justify-content: center;
     align-items: center;
 }
@@ -567,13 +567,16 @@ hr{
     grid-auto-flow: row;
     justify-content: center;
     justify-items: center;
-    background: #fff;
+    background: #fffffff9;
     width: 96%;
     height: auto;
     font-family: 'helvetica';
     color: rgb(51, 51, 51);
     font-size: 17.25px;
     text-align: left;
+    border-left: 0.15rem solid orangered;
+    border-right: 0.15rem solid orangered;
+    border-top: 0.15rem solid orangered;
     margin-bottom: 1rem;
     margin-top: 1.65rem;
     padding: 15px;
@@ -841,8 +844,8 @@ animation: auto 15s infinite linear;
     height: auto;
     font-family: 'Tektur', cursive;
     font-family: 'Titillium Web', sans-serif;
-    font-size: 1.28rem; 
-    line-height: 29px;
+    font-size: 1.25rem; 
+    line-height: 27px;
     color:#262626de;
     padding: 25px;
     border-bottom: 0.15rem solid orangered;
@@ -854,7 +857,7 @@ animation: auto 15s infinite linear;
 }
 
 .k1:hover{
-  background:rgba(146, 146, 146, 0.045);
+  background: #0710560a;
   border-bottom: 0.15rem solid orangered;
 }
 
@@ -890,7 +893,7 @@ animation: auto 15s infinite linear;
   width: 79%;
   height: auto;
   border-top: 2rem solid rgba(189, 189, 189, 0.396);
-  margin-top: 5.5rem;
+  margin-top: 2rem;
 }
 
 .kpt{
@@ -898,26 +901,25 @@ animation: auto 15s infinite linear;
   height: auto;
   font-family: 'Tektur', cursive;
   font-family: 'Titillium Web', sans-serif;
-  font-size: 17.5px;
+  font-size: 17.49px;
   color:rgba(104, 104, 104, 0.857);
-  line-height: 25px;
-  word-spacing: 1.5px;
+  line-height: 27px;
   text-align: left;
-  background: #fff;
+  background:rgba(14, 36, 149, 0.016);
   border-right: 0.25rem solid transparent;
-  border-top: 0.25rem solid transparent;
-  padding: 18px;
+  border-top: 0.12rem solid #8eabc8;
+  padding: 20px;
   border-bottom: 0.25rem solid transparent;
   
 }
 .kpt:hover{
   transition: 0.25s linear;
-  background:rgba(0, 145, 255, 0.008);
-  box-shadow: 8px 8px 0.6rem 0.5px rgba(165, 165, 165, 0.724);
+  background:rgba(14, 36, 149, 0.016);
+  box-shadow: 5px 8px 0.4rem 0.5px rgba(204, 204, 204, 0.724);
   color:rgba(104, 104, 104, 0.915);
-  border-right: 0.25rem solid #8eabc8;
-  border-top: 0.25rem solid #8eabc8;
-  border-radius: 0.5rem;
+  border-top: 0.12rem solid #8eabc8;
+  border-top: 0.12rem solid #8eabc8;
+  border-radius: 0.4rem;
   border-bottom: 0.25rem solid orangered;
 }
 
@@ -928,20 +930,20 @@ animation: auto 15s infinite linear;
     text-align: left;
     width: 100%;
     height: 58%;
-    box-shadow: -8px 8px 0.6rem 0.5px rgba(165, 165, 165, 0.724);
-    border-left: 0.25rem solid #8eabc8;
-    border-top: 0.25rem solid #8eabc8;
+    border-left: 0.12rem solid #99b2cb;
+    border-top: 0.12rem solid #99b2cb;
+    border-bottom: 0.12rem solid #99b2cb;
     background: #f5f5f5d3;
-    border-radius: 0.5rem;
+    border-radius: 0.15rem;
 }
 
 .kgp:hover{
   transition: 0.26s linear;
-  box-shadow: -8px 8px 0.6rem 0.5px rgba(165, 165, 165, 0.724);
-  border-left: 0.25rem solid #8eabc8;
-  border-top: 0.25rem solid #8eabc8;
+  box-shadow: 4px 8px 0.4rem 0.5px rgba(209, 209, 209, 0.724);
+  border-left: 0.12rem solid #8eabc8;
+  border-top: 0.12rem solid #8eabc8;
   background: rgba(27, 84, 141, 0.089);
-  border-radius: 0.5rem;
+  border-radius: 0.25rem;
 }
 
 .kgp img{
@@ -963,7 +965,7 @@ animation: auto 15s infinite linear;
   width: 73%;
 }
 .Cartes:hover{
-  background:rgba(146, 146, 146, 0.045);
+  background: #0710560a;
 }
 .CRT1{
   display: grid;
@@ -976,8 +978,8 @@ animation: auto 15s infinite linear;
     font-family: 'Tektur', cursive;
     font-family: 'Titillium Web', sans-serif;
     font-family: 'Titillium Web', sans-serif;
-    font-size: 1.28rem; 
-    line-height: 29px;
+    font-size: 1.25rem; 
+    line-height: 27px;
     color:#232323de;
     padding: 25px;
 }
@@ -1243,8 +1245,8 @@ height: 220px;
   width: 100%;
   font-family: 'Tektur', cursive;
     font-family: 'Titillium Web', sans-serif;
-    font-size: 1.28rem; 
-    line-height: 29px;
+    font-size: 1.25rem; 
+    line-height: 27px;
     color:#232323de;
     text-align: justify;
 }
@@ -1261,13 +1263,13 @@ height: 220px;
     height: auto;
     font-family: 'Tektur', cursive;
     font-family: 'Titillium Web', sans-serif;
-    font-size: 1.28rem; 
-    line-height: 29px;
+    font-size: 1.25rem; 
+    line-height: 27px;
     color:#232323de;
     padding: 25px;
 }
 .HLTHY:hover{
-  background:rgba(146, 146, 146, 0.045);
+  background: #0710560a;
   border-bottom: 0.15rem solid orangered;
 }
 
@@ -1281,8 +1283,8 @@ height: 220px;
   height: auto;
   font-family: 'Tektur', cursive;
     font-family: 'Titillium Web', sans-serif;
-    font-size: 1.28rem; 
-    line-height: 29px;
+    font-size: 1.25rem; 
+    line-height: 27px;
     color:#232323de;
 }
 
@@ -1332,8 +1334,8 @@ transition: 0.26s linear;
   height: auto;
   font-family: 'Tektur', cursive;
     font-family: 'Titillium Web', sans-serif;
-    font-size: 1.28rem; 
-    line-height: 29px;
+    font-size: 1.25rem; 
+    line-height: 27px;
     color:#232323de;
     border-top: 0.1rem solid #000;
 }
@@ -1360,8 +1362,8 @@ transition: 0.26s linear;
 .Texo{
   font-family: 'Tektur', cursive;
     font-family: 'Titillium Web', sans-serif;
-    font-size: 1.28rem; 
-    line-height: 29px;
+    font-size: 1.25rem; 
+    line-height: 27px;
     color:#232323de;
     text-align: justify;
 }
@@ -1376,14 +1378,14 @@ transition: 0.26s linear;
   height: auto;
   font-family: 'Tektur', cursive;
     font-family: 'Titillium Web', sans-serif;
-    font-size: 1.28rem; 
-    line-height: 29px;
+    font-size: 1.25rem; 
+    line-height: 27px;
     color:#232323de;
     padding: 25px;
 }
 
 .CC:hover{
-  background:rgba(146, 146, 146, 0.045);
+  background: #0710560a;
   border-bottom: 0.15rem solid orangered;
 }
 
@@ -1424,8 +1426,8 @@ transition: 0.26s linear;
   height: 100px;
   font-family: 'Tektur', cursive;
   font-family: 'Titillium Web', sans-serif;
-  font-size: 1.28rem; 
-    line-height: 29px;
+  font-size: 1.25rem; 
+  line-height: 27px;
   color:#232323de;
   border-top: 2rem solid rgba(189, 189, 189, 0.425);
 
@@ -1444,7 +1446,7 @@ transition: 0.26s linear;
 }
 
 .Painting:hover{
-  background:rgba(10, 40, 123, 0.034);
+  background: #0710560a;
   border-bottom: 0.15rem solid orangered;
 }
 
