--- a/index.html
+++ b/index.html
@@ -265,6 +265,7 @@
             justify-items: center;
             width: 100%;
             height: auto;
+            background: #fffffff9;
           }
 
           .VIDEO img{
@@ -580,6 +581,7 @@ hr{
     margin-bottom: 1rem;
     margin-top: 1.65rem;
     padding: 15px;
+    box-shadow: -0.5px 2px 1rem 0 #646464ed;
 }
 .content1 a:hover{
     color: blue;
@@ -1674,7 +1676,7 @@ function myFunction() {
 
 <img src="https://www.zupimages.net/up/23/31/zxgr.jpg" alt="Soleil couchant au Burkina Faso">
 <figure>
-  <figcaption style=" font-family: 'Tektur', cursive; color: orangered; font-size: 14px; padding: 12px; margin-left: 1rem;">Soleil couchant de Nagreongo au Burkina Faso [ Copyright © 2013-GCK ]</figcaption>
+  <figcaption style=" background: #fffffff9; font-family: 'Tektur', cursive; color: orangered; font-size: 14px; padding: 12px; margin-left: 1rem;">Soleil couchant de Nagreongo au Burkina Faso [ Copyright © 2013-GCK ]</figcaption>
   </figure>
 </div>
 
