--- a/index.html
+++ b/index.html
@@ -265,7 +265,7 @@
             justify-items: center;
             width: 100%;
             height: auto;
-            background: #fffffff9;
+            background: #fffffffa;
           }
 
           .VIDEO img{
@@ -540,7 +540,7 @@ hr{
     flex-direction: column;
     width: 100%;
     height: auto;
-    background: #1061a9f9;
+    background: #1269b5ec;
     justify-content: center;
     align-items: center;
 }
@@ -568,23 +568,24 @@ hr{
     grid-auto-flow: row;
     justify-content: center;
     justify-items: center;
-    background: #fffffff9;
+    background: #fffffffa;
     width: 96%;
     height: auto;
     font-family: 'helvetica';
     color: rgb(51, 51, 51);
     font-size: 17.25px;
     text-align: left;
-    border-left: 0.15rem solid orangered;
-    border-right: 0.15rem solid orangered;
-    border-top: 0.15rem solid orangered;
+    border-left: 0.14rem solid orangered;
+    border-right: 0.14rem solid orangered;
+    border-top: 0.14rem solid orangered;
     margin-bottom: 1rem;
     margin-top: 1.65rem;
     padding: 15px;
-    box-shadow: -0.5px 2px 1rem 0 #646464ed;
+    box-shadow: -0.5px 2px 1rem 0 #565656ed;
 }
 .content1 a:hover{
     color: blue;
+    background-color: lightblue;
 }
 
 .YT{
@@ -907,7 +908,7 @@ animation: auto 15s infinite linear;
   color:rgba(104, 104, 104, 0.857);
   line-height: 27px;
   text-align: left;
-  background:rgba(14, 36, 149, 0.016);
+  background:rgba(14, 36, 149, 0);
   border-right: 0.25rem solid transparent;
   border-top: 0.12rem solid #8eabc8;
   padding: 20px;
