--- a/index.html
+++ b/index.html
@@ -195,14 +195,14 @@
       display: flex;
       justify-content: center;
       align-items: center;
-                background: #040a36f4;
+                background: #000;
                  width: 100%;
-                 height: 69px;
+                 height: 85px;
                  object-fit: cover;
                  z-index: 1;
                  top: 0;
                  position: sticky;   
-                 box-shadow: 0 2px 0.45rem 0 #040a3674;
+                 box-shadow: 0 2.35px 0.45rem 0 #171717ed;
           }
           
           
@@ -569,17 +569,14 @@ hr{
     justify-content: center;
     justify-items: center;
     background: #fff;
-    width: 96%;
+    width: 94%;
     height: auto;
     font-family: 'helvetica';
     color: rgb(51, 51, 51);
     font-size: 17.25px;
     text-align: left;
-    border-left: 1.15rem solid #040a36d2;
-    border-right: 1.15rem solid #040a36d2;
-    border-top: 1.15rem solid #040a36d2;
-    border-top-left-radius: 1rem;
-    border-top-right-radius: 1rem;
+    border-top-left-radius: 0.15rem;
+    border-top-right-radius: 0.15rem;
     margin-bottom: 1rem;
     margin-top: 1.65rem;
     padding: 15px;
@@ -897,7 +894,7 @@ animation: auto 15s infinite linear;
   width: 79%;
   height: auto;
   border-bottom: 0.25rem solid orangered;
-  margin-top: 3rem;
+  margin-top: 4rem;
  
 }
 
