--- a/index.html
+++ b/index.html
@@ -197,7 +197,7 @@
       align-items: center;
                 background: #000;
                  width: 100%;
-                 height: 85px;
+                 height: 102px;
                  object-fit: cover;
                  z-index: 1;
                  top: 0;
@@ -540,7 +540,7 @@ hr{
     flex-direction: column;
     width: 100%;
     height: auto;
-    background: #136ebdec;
+    background: rgba(255, 81, 0, 0.893);
     justify-content: center;
     align-items: center;
 }
@@ -569,7 +569,7 @@ hr{
     justify-content: center;
     justify-items: center;
     background: #fff;
-    width: 94%;
+    width: 96%;
     height: auto;
     font-family: 'helvetica';
     color: rgb(51, 51, 51);
@@ -580,7 +580,7 @@ hr{
     margin-bottom: 1rem;
     margin-top: 1.65rem;
     padding: 15px;
-    box-shadow: -0.5px 2px 1rem 0 #02062bf4;
+    
 }
 .content1 a:hover{
     color: blue;
@@ -845,11 +845,12 @@ animation: auto 15s infinite linear;
     height: auto;
     font-family: 'Tektur', cursive;
     font-family: 'Titillium Web', sans-serif;
-    font-size: 1.25rem; 
+    font-size: 1.16rem; 
     line-height: 27px;
     color:#262626de;
     padding: 25px;
     border-bottom: 0.15rem solid orangered;
+    word-spacing: -0.5px;
 }
 .k1 img{
   width: 100%;
@@ -894,7 +895,7 @@ animation: auto 15s infinite linear;
   width: 79%;
   height: auto;
   border-bottom: 0.25rem solid orangered;
-  margin-top: 4rem;
+  margin-top: 5.35rem;
  
 }
 
@@ -978,7 +979,7 @@ animation: auto 15s infinite linear;
     font-family: 'Tektur', cursive;
     font-family: 'Titillium Web', sans-serif;
     font-family: 'Titillium Web', sans-serif;
-    font-size: 1.25rem; 
+    font-size: 1.16rem; 
     line-height: 27px;
     color:#232323de;
     padding: 25px;
@@ -1245,7 +1246,7 @@ height: 220px;
   width: 100%;
   font-family: 'Tektur', cursive;
     font-family: 'Titillium Web', sans-serif;
-    font-size: 1.25rem; 
+    font-size: 1.16rem; 
     line-height: 27px;
     color:#232323de;
     text-align: justify;
@@ -1263,7 +1264,7 @@ height: 220px;
     height: auto;
     font-family: 'Tektur', cursive;
     font-family: 'Titillium Web', sans-serif;
-    font-size: 1.25rem; 
+    font-size: 1.16rem; 
     line-height: 27px;
     color:#232323de;
     padding: 25px;
@@ -1283,7 +1284,7 @@ height: 220px;
   height: auto;
   font-family: 'Tektur', cursive;
     font-family: 'Titillium Web', sans-serif;
-    font-size: 1.25rem; 
+    font-size: 1.16rem; 
     line-height: 27px;
     color:#232323de;
 }
@@ -1334,7 +1335,7 @@ transition: 0.26s linear;
   height: auto;
   font-family: 'Tektur', cursive;
     font-family: 'Titillium Web', sans-serif;
-    font-size: 1.25rem; 
+    font-size: 1.16rem; 
     line-height: 27px;
     color:#232323de;
     border-top: 0.1rem solid #000;
@@ -1362,7 +1363,7 @@ transition: 0.26s linear;
 .Texo{
   font-family: 'Tektur', cursive;
     font-family: 'Titillium Web', sans-serif;
-    font-size: 1.25rem; 
+    font-size: 1.16rem; 
     line-height: 27px;
     color:#232323de;
     text-align: justify;
@@ -1377,8 +1378,7 @@ transition: 0.26s linear;
   width: 74%;
   height: auto;
   font-family: 'Tektur', cursive;
-    font-family: 'Titillium Web', sans-serif;
-    font-size: 1.25rem; 
+  font-size: 1.16rem; 
     line-height: 27px;
     color:#232323de;
     padding: 25px;
