--- a/index.html
+++ b/index.html
@@ -202,7 +202,7 @@
                  z-index: 1;
                  top: 0;
                  position: sticky;   
-                 box-shadow: 0 2.35px 0.45rem 0 #171717ed;
+                 box-shadow: 0 2.35px 0.46rem 0 #3a3a3aed;
           }
           
           
@@ -540,7 +540,7 @@ hr{
     flex-direction: column;
     width: 100%;
     height: auto;
-    background: rgba(255, 81, 0, 0.893);
+    background: rgba(255, 134, 94, 0.756);
     justify-content: center;
     align-items: center;
 }
@@ -568,7 +568,7 @@ hr{
     grid-auto-flow: row;
     justify-content: center;
     justify-items: center;
-    background: #fff;
+    background: #ffffffd1;
     width: 96%;
     height: auto;
     font-family: 'helvetica';
