--- a/index.html
+++ b/index.html
@@ -540,7 +540,7 @@ hr{
     flex-direction: column;
     width: 100%;
     height: auto;
-    background: rgba(255, 137, 97, 0.756);
+    background: rgba(255, 128, 89, 0.752);
     justify-content: center;
     align-items: center;
 }
@@ -568,8 +568,8 @@ hr{
     grid-auto-flow: row;
     justify-content: center;
     justify-items: center;
-    background: #ffffffd2;
-    width: 96%;
+    background: #ffffffd4;
+    width: 99%;
     height: auto;
     font-family: 'helvetica';
     color: rgb(51, 51, 51);
@@ -859,7 +859,7 @@ animation: auto 15s infinite linear;
 }
 
 .k1:hover{
-  background: #040a360b;
+  background: #0c17e70a;
   border-bottom: 0.15rem solid orangered;
 }
 
@@ -932,10 +932,10 @@ animation: auto 15s infinite linear;
     width: 100%;
     height: 58%;
     border-left: 0.12rem solid #99b2cb;
-    border-top: 0.12rem solid #99b2cb;
-    border-bottom: 0.12rem solid #99b2cb;
-    background: #f5f5f5d3;
+    border: 0.12rem solid #99b2cb;
+    background: #f7f7f7d3;
     border-radius: 0.15rem;
+    padding: 3px;
 }
 
 .kgp:hover{
@@ -943,7 +943,7 @@ animation: auto 15s infinite linear;
   box-shadow: 4px 8px 0.4rem 0.5px rgba(209, 209, 209, 0.724);
   border-left: 0.12rem solid #8eabc8;
   border-top: 0.12rem solid #8eabc8;
-  background: rgba(27, 84, 141, 0.089);
+  background: #0c17e70a;
   border-radius: 0.25rem;
 }
 
@@ -966,7 +966,7 @@ animation: auto 15s infinite linear;
   width: 73%;
 }
 .Cartes:hover{
-  background: #040a360b;
+  background: #0c17e70a;
 }
 .CRT1{
   display: grid;
@@ -982,7 +982,7 @@ animation: auto 15s infinite linear;
     font-size: 1.16rem; 
     line-height: 27px;
     color:#232323de;
-    padding: 25px;
+    padding: 14px;
 }
 
 .CRT1:hover{
@@ -1267,10 +1267,10 @@ height: 220px;
     font-size: 1.16rem; 
     line-height: 27px;
     color:#232323de;
-    padding: 25px;
+    padding: 14px;
 }
 .HLTHY:hover{
-  background: #040a360b;
+  background: #0c17e70a;
   border-bottom: 0.15rem solid orangered;
 }
 
@@ -1386,7 +1386,7 @@ transition: 0.26s linear;
 }
 
 .CC:hover{
-  background: #040a360b;
+  background: #0c17e70a;
   border-bottom: 0.15rem solid orangered;
 }
 
@@ -1447,7 +1447,7 @@ transition: 0.26s linear;
 }
 
 .Painting:hover{
-  background: #040a360b;
+  background: #0c17e70a;
   border-bottom: 0.15rem solid orangered;
 }
 
@@ -1807,7 +1807,7 @@ function myFunction() {
         </div>
       </a>
       
-        <div class="k1" style="width: 72%; margin-top: 0.5rem;">
+        <div class="k1" style="width: 72%; margin-top: 0.5rem; padding: 12px;">
 
           <hr style="color: rgb(13, 31, 136); justify-self: left;"> 
           
