--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
         height: 2.15rem;
         object-fit: cover;
         font-family: 'georgia';
-        background: rgba(186, 16, 73, 0.993);
+        background: rgba(193, 20, 81, 0.993);
     }
 
     .DAH{
@@ -568,7 +568,7 @@ hr{
     grid-auto-flow: row;
     justify-content: center;
     justify-items: center;
-    background: #ffffffd4;
+    background: #ffffffd7;
     width: 99%;
     height: auto;
     font-family: 'helvetica';
@@ -1158,7 +1158,6 @@ a:visited{
   justify-items: center;  
   width: 100%; 
   height: 25%;
-  padding: 15px;
 }
 
 .AK{
@@ -2087,9 +2086,9 @@ Dépendemment de leurs régions de vie, peu d'entre elles iront à l'école afin
       </figure>
     </div>
 
-  <div class="KA" style="color: #01458efe; display: flex; justify-content: center; align-items: center; border-left: 0.45rem solid lightgrey;">
+  <div class="KA" style="color: #034c99fe; display: flex; justify-content: center; align-items: center; border-left: 0.45rem solid lightgrey;">
     
-    <p style="font-family: 'Titillium Web', sans-serif; color: rgb(26, 63, 109); font-size: 17px; text-align: justify; padding: 20px; line-height: 24.5px;">
+    <p style="font-family: 'Titillium Web', sans-serif; color: rgb(27, 67, 115); font-size: 17px; text-align: justify; padding-left: 15px; line-height: 24.5px;">
     Au vu de ces différentes difficultés faites de barrières sociales, 
       d'insuffisance d'infractrustures, de services et de moyens de déplacements adaptés, Tiki N'Yiki envisage construire un établissement d'étude, mixte et adapté nommé Accadémie Tiki N'Yiki. Cette académie d'étude dont le but sera d'accueillir des élèves et étudiant-es en situation de handicap voudrait impacter positivement la communauté. 
       Une accréditation sera attribuée à l'académie pour délivrer des diplômes inter-grades.
