--- a/index.html
+++ b/index.html
@@ -202,7 +202,7 @@
                  z-index: 1;
                  top: 0;
                  position: sticky;   
-                 box-shadow: 0 2.35px 0.4rem 0 #3a3a3af7;
+                 box-shadow: 0 2.35px 0.5rem 0 transparent;
           }
           
           
