--- a/index.html
+++ b/index.html
@@ -49,10 +49,10 @@
         justify-content: center;
         justify-items: center;
         width: 100%;
-        height: 2.15rem;
+        height: 2.05rem;
         object-fit: cover;
         font-family: 'georgia';
-        background: rgba(193, 20, 81, 0.993);
+        background: rgba(209, 27, 100, 0.993);
     }
 
     .DAH{
@@ -197,7 +197,7 @@
       align-items: center;
                 background: #000;
                  width: 100%;
-                 height: 102px;
+                 height: 105px;
                  object-fit: cover;
                  z-index: 1;
                  top: 0;
@@ -285,7 +285,7 @@
           justify-items: center; 
           color: rgba(1, 6, 11, 0.968);
           width: 100%; 
-          height: 58px; 
+          height: 65px; 
           padding: 4px;
           font-size: 0.9rem; 
           font-family: 'Tektur', cursive;
@@ -895,8 +895,9 @@ animation: auto 15s infinite linear;
   column-gap: 0.25rem;
   justify-items: center;
   justify-content: space-between;
-  width: 79%;
+  width: 72%;
   height: auto;
+  border-top: 0.25rem solid orangered;
   border-bottom: 0.25rem solid orangered;
   margin-top: 5.35rem;
  
@@ -924,7 +925,7 @@ animation: auto 15s infinite linear;
   border-top: 0.12rem solid #8eabc8;
   border-top: 0.12rem solid #8eabc8;
   border-radius: 0.4rem;
-  border-bottom: 0.25rem solid orangered;
+  border-bottom: 0.1rem solid orangered;
 }
 
 .kgp{
@@ -1440,12 +1441,11 @@ transition: 0.26s linear;
   grid-template-columns: 0.45fr 0.45fr;
   justify-content: center;
   justify-items: center;
-  width: 74%;
+  width: 90%;
   height: auto;
   background: transparent;
   padding: 15px;
   font-family: 'Titillium Web', sans-serif;
-  border-bottom: 0.15rem solid orangered;
 }
 
 .Painting:hover{
