--- a/index.html
+++ b/index.html
@@ -254,9 +254,9 @@
             font-family: 'Titillium Web', sans-serif;
             font-size: 1.25rem;
             text-align: left;
-            line-height: 23.65px;
+            line-height: 25px;
             margin-top: 0.7rem;
-            width: 78%;
+            width: 80%;
           }
 
           .VIDEO{
@@ -1661,8 +1661,8 @@ function myFunction() {
   </a>
 
   <div class="BIENVENUE"> 
-  Bienvenue sur ce site internet en développement ! Cette page internet est sommairement descriptive du contenu et du plan du site une fois terminé.
-  Pour ce faire certaines photos, images et/ou favicons et certains liens hypertextes sont temporaires.
+  Bienvenue sur ce site internet en développement ! Cette page internet est sommairement descriptive du contenu du site.
+  Certaines photos, favicons et certains liens hypertextes sont temporaires.
 <br>
 <b style="color: green;">Merci pour votre compréhension ! Bonne Visite !</b></p>
 </div>
