--- a/index.html
+++ b/index.html
@@ -1382,6 +1382,7 @@ transition: 0.26s linear;
     line-height: 27px;
     color:#232323de;
     padding: 25px;
+    border-bottom: 0.1rem solid #000;
 }
 
 .CC:hover{
