--- a/index.html
+++ b/index.html
@@ -1372,8 +1372,8 @@ transition: 0.26s linear;
 
 .CC{
   display: grid;
-  grid-template-rows: 0.3fr 0.35fr;
-  justify-content: space-between;
+  grid-template-rows: 0.35fr 0.35fr;
+  justify-content: center;
   justify-items: center;
   width: 74%;
   height: auto;
@@ -1392,7 +1392,7 @@ transition: 0.26s linear;
 .C3{
   display: grid;
   grid-template-columns: 1fr 1fr;
-  column-gap: 1rem;
+  column-gap: 3rem;
   justify-content: space-between;
   justify-items: center;
   width: 100%;
@@ -1429,7 +1429,6 @@ transition: 0.26s linear;
   font-size: 1.25rem; 
   line-height: 27px;
   color:#232323de;
-
 }
 
 .Painting{
@@ -1437,7 +1436,7 @@ transition: 0.26s linear;
   grid-template-columns: 0.45fr 0.45fr;
   justify-content: center;
   justify-items: center;
-  width: 90%;
+  width: 91%;
   height: auto;
   background: transparent;
   padding: 15px;
@@ -1446,7 +1445,6 @@ transition: 0.26s linear;
 
 .Painting:hover{
   background: #0c17e70a;
-  border-bottom: 0.15rem solid orangered;
 }
 
 .P1{
