--- a/index.html
+++ b/index.html
@@ -894,8 +894,7 @@ animation: auto 15s infinite linear;
   justify-content: space-between;
   width: 72%;
   height: auto;
-  border-top: 0.2rem solid orangered;
-  border-bottom: 0.2rem solid orangered;
+  border-top: 0.1rem solid orangered;
   margin-top: 5.35rem;
  
 }
@@ -917,12 +916,9 @@ animation: auto 15s infinite linear;
 .kpt:hover{
   transition: 0.25s linear;
   background:rgba(14, 36, 149, 0.016);
-  box-shadow: 5px 8px 0.4rem 0.5px rgba(204, 204, 204, 0.724);
+  box-shadow: 4px 8px 0.4rem 0.5px rgba(204, 204, 204, 0.724);
   color:rgba(104, 104, 104, 0.915);
-  border-top: 0.12rem solid #8eabc8;
-  border-top: 0.12rem solid #8eabc8;
   border-radius: 0.4rem;
-  border-bottom: 0.1rem solid orangered;
 }
 
 .kgp{
@@ -932,20 +928,15 @@ animation: auto 15s infinite linear;
     text-align: left;
     width: 100%;
     height: 58%;
-    border-left: 0.12rem solid #99b2cb;
-    border: 0.12rem solid #99b2cb;
-    background: #f7f7f7d3;
+    background: transparent;
     border-radius: 0.15rem;
     padding: 3px;
 }
 
 .kgp:hover{
   transition: 0.26s linear;
-  box-shadow: 4px 8px 0.4rem 0.5px rgba(209, 209, 209, 0.724);
-  border-left: 0.12rem solid #8eabc8;
-  border-top: 0.12rem solid #8eabc8;
+  box-shadow: -4px 8px 0.4rem 0.5px rgba(204, 204, 204, 0.724);
   background: #0c17e70a;
-  border-radius: 0.25rem;
 }
 
 .kgp img{
@@ -2644,7 +2635,7 @@ Dépendemment de leurs régions de vie, peu d'entre elles iront à l'école afin
       <div class="kgp">
         <img src="https://www.zupimages.net/up/23/28/kkoy.jpg" alt="At office">
       <figure>
-        <figcaption style="font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif; font-size: 19px; margin-top: 1rem;">
+        <figcaption style="font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif; font-size: 19px; margin-top: -11rem;">
         <b style="color:#0177fe"> Le handicap n'est pas une fatalité !</b>
       </figcaption> 
     </figure>
