--- a/index.html
+++ b/index.html
@@ -570,7 +570,7 @@ hr{
     grid-auto-flow: row;
     justify-content: center;
     justify-items: center;
-    background: #ffffffe2;
+    background: #ffffffe7;
     width: 99%;
     height: auto;
     font-family: 'helvetica';
@@ -1427,7 +1427,7 @@ transition: 0.26s linear;
   justify-items: center;
   width: 87%;
   height: auto;
-  background: #1b4cdf10;
+  background: #112a7614;
   padding: 15px;
   font-family: 'Titillium Web', sans-serif;
 }
@@ -2607,7 +2607,7 @@ Dépendemment de leurs régions de vie, peu d'entre elles iront à l'école afin
                       En 2012, il a été décoré Chevalier de l'Ordre du Mérite par l'état du Burkina Faso pour l'ensemble de sa contribution au développement et l'épanouissement d'une communauté différente, marginalisée dans la société dont les personnes handicapées.
                       <br>
                       <br>
-                      En 2016 il a créé Tiki N'Yiki pour élargir le soutien aux enfants orphelins et à d'autres enfants marginalisés. En Juillet 2016 Gabriel a été invité aux <a href="https://fr.wikipedia.org/wiki/%C3%89tats-Unis" target="_blank"> Etats-Unis </a>pour 3 mois afin de faire non seulement du networking mais aussi du fundraising et vendre de l'artisanat [Batiks] pour soutenir les projets de Tiki N'Yiki dont l'éducation et surtout la sécurité alimentaire. 
+                      En 2016 il a créé Tiki N'Yiki pour élargir le soutien aux enfants orphelins et à d'autres enfants marginalisés. Le 14 Juillet 2016 Gabriel a été invité aux <a href="https://fr.wikipedia.org/wiki/%C3%89tats-Unis" target="_blank"> Etats-Unis </a>pour trois (3) mois pour faire non seulement du networking mais aussi du fundraising et vendre de l'artisanat [Peintures & Batiks] afin de soutenir des projets de Tiki N'Yiki dont l'éducation et la sécurité alimentaire. 
                       <br>
                       <br>
                       De la côte-Est [<a href="https://www.nyc.gov/" target="_blank"> NYC-NY</a>, <a href="https://www.boston.gov/" target="_blank">Boston-MA</a>, <a href="https://appleton.maine.gov/" target="_blank"> Appleton-ME</a>, <a href="https://www.burlingtonvt.gov/" target="_blank"> Burlington</a> & <a href="https://www.stjvt.com/" target="_blank"> St Johnsbury-VT</a>] jusqu'à la côte-Ouest [<a href="https://www.portland.gov/" target="_blank"> Portland-OR</a>, <a href="https://www.olympiawa.gov/#section7-anchor" target="_blank"> Olympia-WA</a>] des Etats-Unis avec l'aide efficace d'ami-es, Gabriel a non seulement
@@ -2617,9 +2617,9 @@ Dépendemment de leurs régions de vie, peu d'entre elles iront à l'école afin
                       En 2017, malheureusement Gabriel était obligé de s'exiler au <a href="https://en.wikipedia.org/wiki/Canada" target="_blank"> Canada </a>pour des raisons sécuritaires. En effet certaines activités de Tiki N'Yiki y compris le projet EDUCATION ont été momentanément arrêtées mais elles vont être redéfinies si les conditions de sécurité se réunissent. 
                       <br>
                       <br>
-                      Résident permanent Canadien, il se reconstruit une nouvelle vie. Entre autres, il écrit ses mémoires, apprend le code informatique tout en souhaitant se former aux sciences des nouvelles technologies. Il se passione en développant ce site internet. 
+                      Il se reconstruit une nouvelle vie au Canada. Entre autres, il écrit ses mémoires, apprend le code informatique tout en souhaitant se former aux sciences des nouvelles technologies. Il se passionne dans le développement de ce site internet. 
                       <br>
-                      Gabriel veut créer une fondation pour soutenir l'éducation des enfants handicapés, défendre leurs droits et leur créer des opportunités<a href="https://www.ontb.bf/" target="_blank"> au Burkina Faso.</a>
+                      Gabriel souhaite créer une fondation pour soutenir l'éducation des enfants handicapés, défendre leurs droits et leur créer des opportunités<a href="https://www.ontb.bf/" target="_blank"> au Burkina Faso.</a>
                      Il aime la nature, la photographie, l'histoire, la géographie, l'architecture, le cyclisme, le football et le hockey.
                     </p>      
       </div>
