--- a/index.html
+++ b/index.html
@@ -542,9 +542,10 @@ hr{
     flex-direction: column;
     width: 100%;
     height: auto;
-    background: rgba(205, 205, 205, 0.517);
+    background: rgba(234, 234, 234, 0.94);
     justify-content: center;
     align-items: center;
+    opacity: 0.99;
 }
 
 ::-webkit-scrollbar{
@@ -570,7 +571,7 @@ hr{
     grid-auto-flow: row;
     justify-content: center;
     justify-items: center;
-    background: #fffffff1;
+    background: #fff;
     width: 99.25%;
     height: auto;
     font-family: 'helvetica';
@@ -582,6 +583,7 @@ hr{
     margin-bottom: 1rem;
     margin-top: 1.65rem;
     padding: 15px;
+    border-bottom: 0.2rem solid orangered;
     
 }
 .content1 a:hover{
@@ -906,17 +908,17 @@ animation: auto 15s infinite linear;
   font-family: 'Tektur', cursive;
   font-family: 'Titillium Web', sans-serif;
   font-size: 17.49px;
-  color:rgba(82, 81, 81, 0.858);
+  color:rgba(49, 49, 49, 0.895);
   line-height: 27px;
   text-align: left;
   background:rgba(14, 36, 149, 0);
   border-right: 0.25rem solid transparent;
-  padding: 5px;
+  padding: 10px;
   border-bottom: 0.25rem solid transparent;
 }
 .kpt:hover{
   transition: 0.25s linear;
-  background:rgba(14, 36, 149, 0.016);
+  background: #122aff0a;
   box-shadow: 4px 8px 0.4rem 0.5px rgba(204, 204, 204, 0.724);
   color:rgba(104, 104, 104, 0.915);
   border-radius: 0.4rem;
@@ -1427,7 +1429,7 @@ transition: 0.26s linear;
   justify-items: center;
   width: 87%;
   height: auto;
-  background: #112a7614;
+  background: #1b40af11;
   padding: 15px;
   font-family: 'Titillium Web', sans-serif;
 }
