--- a/index.html
+++ b/index.html
@@ -542,7 +542,7 @@ hr{
     flex-direction: column;
     width: 100%;
     height: auto;
-    background: rgba(233, 233, 233, 0.922);
+    background: rgba(225, 225, 225, 0.963);
     justify-content: center;
     align-items: center;
     opacity: 0.99;
@@ -571,7 +571,7 @@ hr{
     grid-auto-flow: row;
     justify-content: center;
     justify-items: center;
-    background: #fff;
+    background: #fffffff8;
     width: 99.25%;
     height: auto;
     font-family: 'helvetica';
@@ -863,7 +863,7 @@ animation: auto 15s infinite linear;
 }
 
 .k1:hover{
-  background: #122ee213;
+  background: #1724e40f;
 }
 
 .Noel{
@@ -957,7 +957,7 @@ animation: auto 15s infinite linear;
   width: 73%;
 }
 .Cartes:hover{
-  background: #122ee213;
+  background: #1724e40f;
 }
 .CRT1{
   display: grid;
@@ -1087,7 +1087,7 @@ height: 750px;
     justify-items: center;
     background: transparent;
     color: rgb(255, 3, 137);; 
-    padding: 10px; 
+    padding: 9px; 
     font-size: 22px;
     cursor: pointer;
     text-align: center;
@@ -1101,9 +1101,10 @@ height: 750px;
  border-radius: 50%;
 }
 .SPan:hover{
-    border: 0.13rem solid orangered;
-    padding: 0.5rem;
+    border: 0.14rem solid rgba(255, 68, 0, 0.813);
     border-radius: 50%;
+    transition: 0.2s ease-in;
+    background: #d1d1d1e2;
 }
 .FTR{
   width: 500px; 
@@ -1258,7 +1259,7 @@ height: 220px;
     padding: 14px;
 }
 .HLTHY:hover{
-  background: #122ee213;
+  background: #1724e40f;
 }
 
 .Healthy{
@@ -1371,7 +1372,7 @@ transition: 0.26s linear;
 }
 
 .CC:hover{
-  background: #122ee213;
+  background: #1724e40f;
 }
 
 .C3{
@@ -1426,7 +1427,7 @@ transition: 0.26s linear;
   justify-items: center;
   width: 87%;
   height: auto;
-  background: #1b40af11;
+  background: #1c57e00f;
   padding: 15px;
   font-family: 'Titillium Web', sans-serif;
 }
@@ -1875,9 +1876,7 @@ le Burkina Faso dans son emsemble avance vers une certaine autonomie de vie, un 
 
         <div class="k1">
 
-          <div class="K" style="display: grid; grid-template-rows: 0.5fr 1fr; row-gap: 0.5rem; width: 100%; height: auto;">
-
-          <div style="width: 100%; height: auto;">
+          <div style="width: 100%; height: auto; margin-top: -2rem;">
         <p> Naturellement tant qu'il n'y aura pas plus d'acceptation et d'inclusion sociale de la différence, cette lutte ne cessera pas. Pour ces personnes différentes c'est une question de revendication juste de leurs droits pour mieux vivre malgré la différence.
          
          <br>
@@ -1926,8 +1925,6 @@ Tiki N'Yiki veut oeuvrer pour changer la tendance de telles mentalités, faire t
 </div>
 
 </a>
-
-</div>
 
 </div>
 
